--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "homepage": "https://github.com/scottmm374/node-auth1-project#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "knex": "^0.20.8",
+    "morgan": "^1.9.1",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
